@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-35
-Date: 2010-01-22
+Date: 2010-01-28
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
